# distribute_token_solana

./: .README  Anchor.toml  package-lock.json  package.json
Users/vuhuynh/.config/solana/: id.json
programs/distribute-token-solana/: Cargo.toml
programs/distribute-token-solana/Users/vuhuynh/.config/solana/: id.json
programs/distribute-token-solana/src/: lib.rs
scripts/: balance-tree.ts  borsh.service.ts  distribute.service.ts  hash.service.ts  merkle-tree.ts  merkle_tree.ts  parse-balance-map.ts
tests/: distribute-token-solana.ts
